# STM32-CH375B

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  usb_voodoo.ioc
Core/Inc/: auto_gun_press.h  log.h  main.h  stm32f4xx_hal_conf.h
Core/Src/: auto_gun_press.c  log.c  main.c  stm32f4xx_hal_msp.c
Drivers/ch375/include/: usb.h
Drivers/ch375/include/hid/: hid.h  hid_keyboard.h  hid_mouse.h  usbhid.h
Drivers/ch375/src/: ch375.c  ch375_usbhost.c
Drivers/ch375/src/hid/: hid.c  hid_keyboard.c  hid_mouse.c  usbhid.c
Middlewares/ST/STM32_USB_Device_Library/Class/CustomHID/Src/: usbd_customhid.c
USB_DEVICE/App/: composite_hid.c  usbd_desc.c
cmake/: gcc-arm-none-eabi.cmake
